# openvdb

./: .cirrus.yml  .dir-locals.el  .gitignore  .gitmodules  .travis.run  .travis.yml  AST_8h.html  AST_8h_source.html  Activate_8h.html  Activate_8h_source.html  Archive_8h.html  Archive_8h_source.html  AttributeArrayString_8h.html  AttributeArrayString_8h_source.html  AttributeArray_8h.html  AttributeArray_8h_source.html  AttributeBindings_8h.html  AttributeBindings_8h_source.html  AttributeGroup_8h.html  AttributeGroup_8h_source.html  AttributeRegistry_8h.html  AttributeRegistry_8h_source.html  AttributeSet_8h.html  AttributeSet_8h_source.html  AttributeTransferUtil_8h.html  AttributeTransferUtil_8h_source.html  BBox_8h.html  BBox_8h_source.html  BUILD.conf  BuildingWithCMake.md  CHANGES  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CNanoVDB_8h.html  CNanoVDB_8h_source.html  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSampleFromVoxels_8h.html  (+7379 more)
doc/: .doxygen_warning_suppress.txt  CMakeLists.txt  build.txt  changes.txt  codingstyle.txt  dependencies.txt  doc.txt  doxygen-config  doxygen-config-houdini  examplecode.txt  faq.txt  header.html  houdini.txt  math.txt  openvdb.css  points.txt  python.txt
doc/ax/: ax.txt  axcplusplus.txt  axexamples.txt  axfunctionlist.txt  doc.txt  gen_function_docs  gen_function_houdini_docs  openvdbaxapi.txt
doc/html/: doxygen.css  index.html
doc/nanovdb/: FAQ.md  HelloWorld.md  HowToBuild.md  PythonAPI.md  PythonMigration.md  SourceTree.md  doc.md
ext/: CMakeLists.txt  THIRD-PARTY.md
ext/doxygen-awesome/: doxygen-awesome-paragraph-link.js  doxygen-awesome.css
fvdb/: .clang-format  .clangd  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  compile_commands.json  docker-compose.yml  pyproject.toml  setup.py
fvdb/.devcontainer/: devcontainer.json
fvdb/ci/: Dockerfile.runner  README.md  main.sh
fvdb/docs/: conf.py  index.rst
fvdb/env/: blosc.patch  build_environment.yml  build_requirements.txt  cutlass.patch  dev_environment.yml  learn_environment.yml  release_base_environment.yml  test_environment.yml  tinyply.patch  torch_cxx11.yml
fvdb/examples/: common.py  compare_conv_speed.py  debug_batch.py  debug_benchmark_pooling.py  debug_conv.py  debug_diffusion_time.py  debug_gn_benchmark.py  debug_grad_splat.py  debug_grad_trilerp.py  debug_hierarchy.py  debug_indexing_benchmark.py  debug_maxpool.py  debug_mutable_grids.py  debug_nn_spred.py  debug_points_in_grid.py  debug_ray_implicit_intersection.py  debug_ray_segment_marching.py  debug_ray_voxel_marching.py  debug_splat.py  debug_super_resolution.py  debug_trilerp.py  debug_uniform_ray_samples.py  debug_upsample.py  dilating_grids.py  docker_build.sh  grid_building.py  grid_subdivide_coarsen.py  io.py  mutable_grids.py  nerf.py  overfit_sdf.py  perception_example.py  plenoxels.py  ray_segment_marching.py  ray_voxel_marching.py  sample_trilinear.py  sorted_ray_marching.py  splat_trilinear.py  structure_optimization.py  subdivide.py  (+3 more)
fvdb/fvdb/: _Cpp.pyi  __init__.py  __init__.pyi  py.typed  types.py  version.py.in
fvdb/notebooks/: 00_api_basics_intro.ipynb  00_intro.ipynb  01_api_basics.ipynb  01_nn.ipynb  02_conv.ipynb  02_nn.ipynb  03_conv.ipynb
fvdb/scripts/: rename_wheels.py
fvdb/src/: CMakeLists.txt  Config.cpp  Config.h  FVDB.cpp  FVDB.h  GaussianSplatting.cpp  GaussianSplatting.h  GaussianSplatting2.cpp  GaussianSplatting2.h  GridBatch.cpp  GridBatch.h  JaggedTensor.cpp  JaggedTensor.h  SparseConvPackInfo.cpp  SparseConvPackInfo.h  Types.h
fvdb/tests/: __init__.py
nanovdb/cmd/: CMakeLists.txt
nanovdb/docs/: CMakeLists.txt  Changes.md  FAQ.md  HowToBuild.md  SourceTree.md  ToDo.md  doc.md  doxygen-config
nanovdb/examples/: CMakeLists.txt
nanovdb/nanovdb/: CMakeLists.txt  CNanoVDB.h  GridHandle.h  HostBuffer.h  NanoVDB.h  NodeManager.h  PNanoVDB.h  PNanoVDB2.h  Readme.md
nanovdb/nanovdb_editor/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  config  includes
nanovdb/unittest/: CMakeLists.txt  TestNanoVDB.cpp  TestOpenVDB.cpp  pnanovdb_validate_strides.h
openvdb/: .CHANGES.swp  .gitignore  CHANGES  CMakeLists.txt  COPYRIGHT  Exceptions.h  Grid.cc  Grid.h  INSTALL  Makefile  MetaMap.cc  MetaMap.h  Metadata.cc  Metadata.h  PROJECT  Package.mk  Platform.cc  Platform.h  PlatformConfig.h  Types.h  clmakedep.py  context.py  doxygen-config  doxygen-config.cmake  houdini.mk  manifest.yaml  maya.mk  openvdb.cc  openvdb.h  platform.mk  version.h
openvdb/io/: io.h  (+16 more)
openvdb_ax/: CMakeLists.txt  Exceptions.h  ax.cc  version.h
openvdb_cmd/: CMakeLists.txt
openvdb_houdini/: AttributeTransferUtil.h  BUILD.conf  CMakeLists.txt  COPYRIGHT  DW_OpenVDBRasterizePoints.cmd  GEO_PrimVDB.cc  GEO_PrimVDB.h  GEO_VDBTranslator.cc  GR_PrimVDBPoints.cc  GT_GEOPrimCollectVDB.cc  GT_GEOPrimCollectVDB.h  GU_PrimVDB.cc  GU_PrimVDB.h  GU_VDBPointTools.h  GeometryUtil.cc  GeometryUtil.h  Makefile  OP_NodeChain.h  PROJECT  Package.mk  ParmFactory.cc  ParmFactory.h  PointUtils.cc  PointUtils.h  SHOP_OpenVDB_Points.cc  SOP_NodeVDB.cc  SOP_NodeVDB.h  SOP_OpenVDB_Activate.cc  SOP_OpenVDB_Advect.cc  SOP_OpenVDB_Advect_Points.cc  SOP_OpenVDB_Analysis.cc  SOP_OpenVDB_Clip.cc  SOP_OpenVDB_Combine.cc  SOP_OpenVDB_Convert.cc  SOP_OpenVDB_Create.cc  SOP_OpenVDB_Densify.cc  SOP_OpenVDB_Diagnostics.cc  SOP_OpenVDB_Extrapolate.cc  SOP_OpenVDB_Fill.cc  SOP_OpenVDB_Filter.cc  (+48 more)
openvdb_maya/: AEOpenVDBCopyTemplate.mel  AEOpenVDBFromPolygonsTemplate.mel  AEOpenVDBTransformTemplate.mel  AEOpenVDBVisualizeTemplate.mel  AEOpenVDBWriteTemplate.mel  BUILD.conf  CMakeLists.txt  Makefile  OpenVDBCopyNode.cc  OpenVDBData.cc  OpenVDBData.h  OpenVDBFilterNode.cc  OpenVDBFromMayaFluidNode.cc  OpenVDBFromPolygonsNode.cc  OpenVDBPlugin.cc  OpenVDBPlugin.h  OpenVDBReadNode.cc  OpenVDBToPolygonsNode.cc  OpenVDBTransformNode.cc  OpenVDBUtil.cc  OpenVDBUtil.h  OpenVDBVisualizeNode.cc  OpenVDBWriteNode.cc  Package.mk  context.py  manifest.yaml
samples/: CMakeLists.txt  openVDBHelloWorld.cpp  openVDBLevelSetSphere.cpp
tests/: CMakeLists.txt
vdb_examples/: CMakeLists.txt
(+4307 files in other folders)
